[gd_scene load_steps=15 format=3 uid="uid://c5htviq7382ci"]

[ext_resource type="FontFile" path="res://Assets/Clean.tres" id="1_hbl2f"]
[ext_resource type="Texture2D" uid="uid://gmtnw7vodn2v" path="res://Assets/port.png" id="2_murg5"]
[ext_resource type="FontFile" uid="uid://44q6n7unxdv" path="res://Assets/AdobeClean-SemiCn.otf" id="3_yuwjv"]
[ext_resource type="Script" path="res://Scripts/Feature.gd" id="4_lwoqe"]

[sub_resource type="StyleBoxFlat" id="12"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.639216, 0.258824, 0.0823529, 0.380392)
border_color = Color(0.639216, 0.258824, 0.0823529, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="13"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.639216, 0.258824, 0.0823529, 0.0941176)
border_color = Color(0.639216, 0.258824, 0.0823529, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="14"]
bg_color = Color(0.796078, 0.784314, 0.741176, 1)

[sub_resource type="StyleBoxFlat" id="16"]
content_margin_top = 30.0
bg_color = Color(1, 1, 1, 0.705882)
expand_margin_left = 15.0
expand_margin_top = 15.0
expand_margin_right = 15.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id="15"]
content_margin_top = 30.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 15.0
expand_margin_top = 15.0
expand_margin_right = 15.0
expand_margin_bottom = 15.0

[sub_resource type="FontFile" id="7"]
fallbacks = Array[Font]([ExtResource("3_yuwjv")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="8"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
bg_color = Color(0.796078, 0.784314, 0.741176, 1)

[sub_resource type="StyleBoxFlat" id="11"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
bg_color = Color(0.796078, 0.784314, 0.741176, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="Theme" id="17"]
default_font = ExtResource("1_hbl2f")
Button/colors/font_color = Color(0.639216, 0.258824, 0.0823529, 1)
Button/constants/h_separation = 2
Button/fonts/font = ExtResource("1_hbl2f")
Button/styles/focus = SubResource("12")
Button/styles/hover = SubResource("12")
Button/styles/normal = SubResource("13")
Button/styles/pressed = SubResource("12")
CheckBox/constants/h_separation = 20
GraphEdit/styles/bg = SubResource("14")
GraphNode/constants/port_offset = -17
GraphNode/icons/port = ExtResource("2_murg5")
GraphNode/styles/frame = SubResource("16")
GraphNode/styles/selected_frame = SubResource("15")
Label/colors/font_color = Color(0.639216, 0.258824, 0.0823529, 1)
Label/fonts/font = ExtResource("1_hbl2f")
LineEdit/colors/font_color = Color(0, 0, 0, 1)
LineEdit/fonts/font = SubResource("7")
LineEdit/styles/normal = SubResource("8")
TextEdit/colors/font_color = Color(0, 0, 0, 1)
TextEdit/fonts/font = ExtResource("1_hbl2f")
TextEdit/styles/normal = SubResource("11")

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="FeatureNode" type="GraphNode" groups=["graph_nodes"]]
offset_right = 390.0
offset_bottom = 257.0
theme = SubResource("17")
title = "New node"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0.639216, 0.258824, 0.0823529, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0.639216, 0.258824, 0.0823529, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("4_lwoqe")
more = NodePath("HBoxContainer/More")
money = NodePath("HBoxContainer/MainColumn/Money")
save_var = NodePath("HBoxContainer/MainColumn/SaveVar")
task = NodePath("HBoxContainer/MainColumn/Task")
end = NodePath("HBoxContainer/MainColumn/End")
skills = NodePath("HBoxContainer/MainColumn/Skills")
signal_emit = NodePath("HBoxContainer/MainColumn/EmitSignal")
node_title = NodePath("HBoxContainer/MainColumn/Title/LineEdit")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 40

[node name="MainColumn" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="HBoxContainer" parent="HBoxContainer/MainColumn"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Label" type="Label" parent="HBoxContainer/MainColumn/Title"]
layout_mode = 2
text = "Title"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/MainColumn/Title"]
layout_mode = 2

[node name="EmitSignal" type="HBoxContainer" parent="HBoxContainer/MainColumn"]
visible = false
layout_mode = 2
theme_override_constants/separation = 60

[node name="EmitSignal" type="Label" parent="HBoxContainer/MainColumn/EmitSignal"]
layout_mode = 2
text = "Signal"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/MainColumn/EmitSignal"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="Timer2" type="Timer" parent="HBoxContainer/MainColumn/EmitSignal/LineEdit"]
wait_time = 0.65

[node name="PopupMenu2" type="PopupMenu" parent="HBoxContainer/MainColumn/EmitSignal/LineEdit"]
item_count = 9
item_0/text = "Cut"
item_0/id = 0
item_1/text = "Copy"
item_1/id = 1
item_2/text = "Paste"
item_2/id = 2
item_3/text = ""
item_3/id = -1
item_3/separator = true
item_4/text = "Select All"
item_4/id = 4
item_5/text = "Clear"
item_5/id = 3
item_6/text = ""
item_6/id = -1
item_6/separator = true
item_7/text = "Undo"
item_7/id = 5
item_8/text = "Redo"
item_8/id = 6

[node name="Timer3" type="Timer" parent="HBoxContainer/MainColumn/EmitSignal/LineEdit"]
wait_time = 0.65

[node name="PopupMenu3" type="PopupMenu" parent="HBoxContainer/MainColumn/EmitSignal/LineEdit"]
item_count = 9
item_0/text = "Cut"
item_0/id = 0
item_1/text = "Copy"
item_1/id = 1
item_2/text = "Paste"
item_2/id = 2
item_3/text = ""
item_3/id = -1
item_3/separator = true
item_4/text = "Select All"
item_4/id = 4
item_5/text = "Clear"
item_5/id = 3
item_6/text = ""
item_6/id = -1
item_6/separator = true
item_7/text = "Undo"
item_7/id = 5
item_8/text = "Redo"
item_8/id = 6

[node name="Task" type="HBoxContainer" parent="HBoxContainer/MainColumn"]
visible = false
layout_mode = 2
theme_override_constants/separation = 74

[node name="Task" type="Label" parent="HBoxContainer/MainColumn/Task"]
layout_mode = 2
text = "Task"

[node name="LineEdit" type="TextEdit" parent="HBoxContainer/MainColumn/Task"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="HScrollBar2" type="HScrollBar" parent="HBoxContainer/MainColumn/Task/LineEdit"]
layout_mode = 0

[node name="VScrollBar2" type="VScrollBar" parent="HBoxContainer/MainColumn/Task/LineEdit"]
layout_mode = 0

[node name="Timer4" type="Timer" parent="HBoxContainer/MainColumn/Task/LineEdit"]
wait_time = 0.65

[node name="Timer5" type="Timer" parent="HBoxContainer/MainColumn/Task/LineEdit"]
wait_time = 3.0
one_shot = true

[node name="Timer6" type="Timer" parent="HBoxContainer/MainColumn/Task/LineEdit"]
wait_time = 0.05

[node name="PopupMenu2" type="PopupMenu" parent="HBoxContainer/MainColumn/Task/LineEdit"]
item_count = 9
item_0/text = "Undo"
item_0/id = 5
item_1/text = "Redo"
item_1/id = 6
item_2/text = ""
item_2/id = -1
item_2/separator = true
item_3/text = "Cut"
item_3/id = 0
item_4/text = "Copy"
item_4/id = 1
item_5/text = "Paste"
item_5/id = 2
item_6/text = ""
item_6/id = -1
item_6/separator = true
item_7/text = "Select All"
item_7/id = 4
item_8/text = "Clear"
item_8/id = 3

[node name="HScrollBar3" type="HScrollBar" parent="HBoxContainer/MainColumn/Task/LineEdit"]
visible = false
layout_mode = 0
offset_top = 18.0
offset_right = 188.0
offset_bottom = 30.0
max_value = 0.0

[node name="VScrollBar3" type="VScrollBar" parent="HBoxContainer/MainColumn/Task/LineEdit"]
visible = false
layout_mode = 0
offset_left = 188.0
offset_right = 200.0
offset_bottom = 30.0
max_value = 0.0

[node name="Timer7" type="Timer" parent="HBoxContainer/MainColumn/Task/LineEdit"]
wait_time = 0.65

[node name="Timer8" type="Timer" parent="HBoxContainer/MainColumn/Task/LineEdit"]
wait_time = 3.0
one_shot = true

[node name="Timer9" type="Timer" parent="HBoxContainer/MainColumn/Task/LineEdit"]
wait_time = 0.05

[node name="PopupMenu3" type="PopupMenu" parent="HBoxContainer/MainColumn/Task/LineEdit"]
item_count = 9
item_0/text = "Cut"
item_0/id = 0
item_1/text = "Copy"
item_1/id = 1
item_2/text = "Paste"
item_2/id = 2
item_3/text = ""
item_3/id = -1
item_3/separator = true
item_4/text = "Select All"
item_4/id = 4
item_5/text = "Clear"
item_5/id = 3
item_6/text = ""
item_6/id = -1
item_6/separator = true
item_7/text = "Undo"
item_7/id = 5
item_8/text = "Redo"
item_8/id = 6

[node name="Money" type="HBoxContainer" parent="HBoxContainer/MainColumn"]
visible = false
layout_mode = 2
theme_override_constants/separation = 74

[node name="Money" type="Label" parent="HBoxContainer/MainColumn/Money"]
layout_mode = 2
text = "Money"

[node name="Spinbox" type="SpinBox" parent="HBoxContainer/MainColumn/Money"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="LineEdit2" type="LineEdit" parent="HBoxContainer/MainColumn/Money/Spinbox"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -16.0
mouse_filter = 1
text = "0"

[node name="Timer2" type="Timer" parent="HBoxContainer/MainColumn/Money/Spinbox"]

[node name="LineEdit3" type="LineEdit" parent="HBoxContainer/MainColumn/Money/Spinbox"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
text = "0"

[node name="Timer3" type="Timer" parent="HBoxContainer/MainColumn/Money/Spinbox"]

[node name="Skills" type="HBoxContainer" parent="HBoxContainer/MainColumn"]
visible = false
layout_mode = 2
theme_override_constants/separation = 7

[node name="Skills" type="Label" parent="HBoxContainer/MainColumn/Skills"]
layout_mode = 2
text = "Skills Lvl Up"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MainColumn/Skills"]
layout_mode = 2

[node name="SkillOption" type="OptionButton" parent="HBoxContainer/MainColumn/Skills/HBoxContainer"]
layout_mode = 2

[node name="PopupMenu2" type="PopupMenu" parent="HBoxContainer/MainColumn/Skills/HBoxContainer/SkillOption"]
item_count = 4
item_0/text = "Intellect"
item_0/checkable = 2
item_0/checked = true
item_0/id = 0
item_1/text = "Charisma"
item_1/checkable = 2
item_1/id = 1
item_2/text = "Endurance"
item_2/checkable = 2
item_2/id = 2
item_3/text = "Dexterity"
item_3/checkable = 2
item_3/id = 3

[node name="PopupMenu3" type="PopupMenu" parent="HBoxContainer/MainColumn/Skills/HBoxContainer/SkillOption"]
item_count = 4
item_0/text = "Intellect"
item_0/checkable = 2
item_0/checked = true
item_0/id = 0
item_1/text = "Charisma"
item_1/checkable = 2
item_1/id = 1
item_2/text = "Endurance"
item_2/checkable = 2
item_2/id = 2
item_3/text = "Dexterity"
item_3/checkable = 2
item_3/id = 3

[node name="SkillUpgrade" type="SpinBox" parent="HBoxContainer/MainColumn/Skills/HBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="LineEdit2" type="LineEdit" parent="HBoxContainer/MainColumn/Skills/HBoxContainer/SkillUpgrade"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -16.0
mouse_filter = 1
text = "0"

[node name="Timer2" type="Timer" parent="HBoxContainer/MainColumn/Skills/HBoxContainer/SkillUpgrade"]

[node name="LineEdit3" type="LineEdit" parent="HBoxContainer/MainColumn/Skills/HBoxContainer/SkillUpgrade"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
text = "0"

[node name="Timer3" type="Timer" parent="HBoxContainer/MainColumn/Skills/HBoxContainer/SkillUpgrade"]

[node name="SaveVar" type="HBoxContainer" parent="HBoxContainer/MainColumn"]
visible = false
layout_mode = 2
theme_override_constants/separation = -5

[node name="SaveVar" type="Label" parent="HBoxContainer/MainColumn/SaveVar"]
layout_mode = 2
text = "Save Variable"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/MainColumn/SaveVar"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Timer2" type="Timer" parent="HBoxContainer/MainColumn/SaveVar/LineEdit"]
wait_time = 0.65

[node name="PopupMenu2" type="PopupMenu" parent="HBoxContainer/MainColumn/SaveVar/LineEdit"]
item_count = 9
item_0/text = "Cut"
item_0/id = 0
item_1/text = "Copy"
item_1/id = 1
item_2/text = "Paste"
item_2/id = 2
item_3/text = ""
item_3/id = -1
item_3/separator = true
item_4/text = "Select All"
item_4/id = 4
item_5/text = "Clear"
item_5/id = 3
item_6/text = ""
item_6/id = -1
item_6/separator = true
item_7/text = "Undo"
item_7/id = 5
item_8/text = "Redo"
item_8/id = 6

[node name="Timer3" type="Timer" parent="HBoxContainer/MainColumn/SaveVar/LineEdit"]
wait_time = 0.65

[node name="PopupMenu3" type="PopupMenu" parent="HBoxContainer/MainColumn/SaveVar/LineEdit"]
item_count = 9
item_0/text = "Cut"
item_0/id = 0
item_1/text = "Copy"
item_1/id = 1
item_2/text = "Paste"
item_2/id = 2
item_3/text = ""
item_3/id = -1
item_3/separator = true
item_4/text = "Select All"
item_4/id = 4
item_5/text = "Clear"
item_5/id = 3
item_6/text = ""
item_6/id = -1
item_6/separator = true
item_7/text = "Undo"
item_7/id = 5
item_8/text = "Redo"
item_8/id = 6

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/MainColumn/SaveVar"]
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer/MainColumn/SaveVar"]
layout_mode = 2
text = "+"

[node name="End" type="HBoxContainer" parent="HBoxContainer/MainColumn"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/MainColumn/End"]
layout_mode = 2
text = "DIALOG END"

[node name="AddColumn" type="VBoxContainer" parent="HBoxContainer"]
visible = false
layout_mode = 2

[node name="Options" type="Button" parent="HBoxContainer/AddColumn"]
visible = false
layout_mode = 2
toggle_mode = true
text = "Options"

[node name="Task" type="Button" parent="HBoxContainer/AddColumn"]
layout_mode = 2
toggle_mode = true
text = "+Task"

[node name="Skills" type="Button" parent="HBoxContainer/AddColumn"]
layout_mode = 2
toggle_mode = true
text = "+Skills"

[node name="Money" type="Button" parent="HBoxContainer/AddColumn"]
layout_mode = 2
toggle_mode = true
text = "Money"

[node name="EmitSignal" type="Button" parent="HBoxContainer/AddColumn"]
layout_mode = 2
toggle_mode = true
text = "EmitSignal"

[node name="SaveVar" type="Button" parent="HBoxContainer/AddColumn"]
layout_mode = 2
toggle_mode = true
text = "+SaveVar"

[node name="End" type="Button" parent="HBoxContainer/AddColumn"]
layout_mode = 2
toggle_mode = true
text = "END"

[node name="More" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("1")
toggle_mode = true
text = "+"

[connection signal="close_request" from="." to="." method="_on_GraphNode_close_request"]
[connection signal="resize_request" from="." to="." method="_on_GraphNode_resize_request"]
[connection signal="text_changed" from="HBoxContainer/MainColumn/Title/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="HBoxContainer/MainColumn/SaveVar/Button" to="." method="_on_new_save_var_button_pressed"]
[connection signal="toggled" from="HBoxContainer/AddColumn/Options" to="." method="_on_Options_toggled"]
[connection signal="toggled" from="HBoxContainer/AddColumn/Task" to="." method="_on_Task_toggled"]
[connection signal="toggled" from="HBoxContainer/AddColumn/Skills" to="." method="_on_Skills_toggled"]
[connection signal="toggled" from="HBoxContainer/AddColumn/Money" to="." method="_on_Money_toggled"]
[connection signal="toggled" from="HBoxContainer/AddColumn/EmitSignal" to="." method="_on_EmitSignal_toggled"]
[connection signal="toggled" from="HBoxContainer/AddColumn/SaveVar" to="." method="_on_SaveVar_toggled"]
[connection signal="toggled" from="HBoxContainer/AddColumn/End" to="." method="_on_End_toggled"]
[connection signal="toggled" from="HBoxContainer/More" to="." method="_on_More_toggled"]
